Fixed Spacing of sections, Added submit button

--- a/style.css
+++ b/style.css
@@ -4,7 +4,11 @@ body {
 
 
 p {
-    color: dimgray;
+    color: gray;
+    font-size: .75em;
+    margin-top: 10px;
+    margin-left: 12px;
+    margin-bottom: 10px;
 }
 
 form {
@@ -28,21 +32,20 @@ form {
 
 #phone {
     display: inline-block;
-    width: 33%;
+    width: 33.33%;
     box-sizing: border-box;
 }
 
 #email {
     display: inline-block;
-    width: 33%;
+    width: 33.33%;
     box-sizing: border-box;
 }
 
 #availability {
     display: inline-block;
-    width: 33%;
+    width: 33.33%;
     box-sizing: border-box;
-    margin-right: 0px;
 }
 
 #skills {
@@ -74,8 +77,17 @@ input {
     height: 1.1em;
     margin-left: 10px;
     margin-right: 10px;
+    margin-bottom: 10px;
 
 }
+
+#submit {
+    display: flex;
+    justify-content: center;
+    padding: 18px;
+    
+}
+
 
 section {
     border: 1px solid lightgray;
